--- a/Card_wallet_confirm.html
+++ b/Card_wallet_confirm.html
@@ -38,7 +38,7 @@
     <section class="mob">
         <header style="z-index: 0;">
             <div class="logo">
-                <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+                <a href="Card_index.html">
                     <p class="logop"><span style="font-style: italic; font-weight: bold;">@blockchain</span> card</p>
                 </a>
             </div>
