--- a/Card_wallet_er.html
+++ b/Card_wallet_er.html
@@ -35,7 +35,7 @@
         <header>
 
             <div class="logo">
-                <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+                <a href="Card_index.html">
                     <p class="logop"><span style="font-style: italic; font-weight: bold;">@blockchain</span> card</p>
                 </a>
               
@@ -166,7 +166,7 @@
                 </div>
             </div> -->
 
-            <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+            <a href="Card_index.html">
                 <div class="btn1 pay">
                     <p class="btnp" style="font-style: normal; font-weight: bold;">확인</p>
                 </div>
