--- a/Card_wallet_receive.html
+++ b/Card_wallet_receive.html
@@ -34,7 +34,7 @@
         <header>
 
             <div class="logo">
-                <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+                <a href="Card_index.html">
                     <p class="logop"><span style="font-style: italic; font-weight: bold;">@blockchain</span> card</p>
                 </a>
             </div>
@@ -97,7 +97,7 @@
             <div id="qrcode" class="qrcode5" onclick="copy_to_clipboard()" >
                 <img src="http://10.159.29.84:8080/address_qrcode" style="width: 100%;">
             </div>
-            <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+            <a href="Card_index.html">
                 <div class="btn1 back">
                     <p style="font-style: normal;" class="btnp"> 돌아가기</p>
                 </div>
