--- a/Card_wallet_transfer.html
+++ b/Card_wallet_transfer.html
@@ -42,7 +42,7 @@
         
         <header style="z-index: 0;">
             <div class="logo">
-                <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+                <a href="Card_index.html">
                     <p class="logop"><span style="font-style: italic; font-weight: bold;">@blockchain</span> card</p>
                 </a>
             </div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         
-            <a href="1PZm2yGGaDi2n8sRbqVmMBPvXBcFPYgUN3.html">
+            <a href="Card_index.html">
                 <div class="btn1 back" style="margin-top: 15px;">
                     <p style="font-style: normal;" class="btnp"> 돌아가기</p>
                 </div>
